# ml-affordable-care-act

./: .gitignore  Makefile  README.md  pyproject.toml
.github/: pull_request_template.md
ml-affordable-care-act/: applying_yelp_to_tweets.ipynb  binarize_star_ratings.ipynb  matt-svm.ipynb  rohit_part_2.ipynb  xgboost_feature_importances.ipynb
ml-affordable-care-act/data/: rohit_part_2.ipynb  tweet_manual_sample.xlsx  tweetmanualsample.csv  tweets_with_predictions.csv
ml-affordable-care-act/data-wrangling/: create_yelp_samples.ipynb  exploratory_data_analysis.ipynb
ml-affordable-care-act/initial_analysis/: EDA_summer_long.ipynb  binarize_star_ratings.html  binarize_star_ratings.ipynb  exploratory_data_analysis.ipynb  exploratory_data_analysis_aicha_camara.ipynb  rohit_checkpoint1_analysis.ipynb
ml-affordable-care-act/model_parameter_testing/: matt-svm-BEST-shortcut.ipynb  matt-svm.ipynb  neural_net.ipynb  nlp_pipeline_and_xgboost.ipynb  random_forest.ipynb  rohit_part_2.ipynb
ml-affordable-care-act/models/: best_logistic_clf.pkl  lr_feature_importances.ipynb  neural_net.ipynb  nlp_pipeline_and_xgboost.ipynb  random_forest.ipynb  randomforestv1.pkl  randomforestv2.pkl  rf_feature_importances.ipynb  svm_feature_importances.ipynb  tfidf_vectorizer.pkl  xgboostv1.pkl
summer_part2_analysis/: EDA.ipynb
summer_part2_analysis/myenv/: pyvenv.cfg
