[tool.poetry]
name = "ml-affordable-care-act"
version = "0.1.0"
description = ""
authors = ["rohitkandala <111527275+rohitkandala@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "ml_affordable_care_act"}]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.3"
nltk = "^3.8.1"
numpy = "^1.24.0"
isort = "^5.0.0"
black = "^23.3.0"
pylint = "^2.17.2"
scikit-learn = "^1.2.2"
ipykernel = "^6.22.0"
matplotlib = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"